# Collections-in-C

./: CMakeLists.txt  README.md  collections  main.c  make.txt
collections.dSYM/Contents/: Info.plist
collections.dSYM/Contents/Resources/DWARF/: collections
common/: allocator.c  allocator.h  comparer.c  comparer.h  data_handler.c  data_handler.h  types.h
hash_map/: hash_map.c  hash_map.h  int_hash_map.c  int_hash_map.h  str_hash_map.c  str_hash_map.h
include/common/: allocator.h
include/hash_map/: hash_map.h  int_hash_map.h  str_hash_map.h
include/linked_list/: doubly_linked_list.h  linked_list.h
linked_list/: doubly_linked_list.c  doubly_linked_list.h  linked_list.c  linked_list.h
output/unix/lib/: libcollections.dylib
outputs/: Collections.cbp  Makefile  cmake_install.cmake
outputs/debug/lib/: libcollections.dylib
outputs/lib/apple/: libcollections.dylib
src/: main.c
src/common/: allocator.c  data_handler.c
src/hash_map/: hash_map.c  int_hash_map.c  str_hash_map.c
src/linked_list/: doubly_linked_list.c  linked_list.c
test/: test_doubly_linked_list.c  test_doubly_linked_list.h  test_hash_map.c  test_hash_map.h  test_int_hash_map.c  test_int_hash_map.h  test_int_linked_list.c  test_int_linked_list.h  test_linked_list.c  test_linked_list.h  test_str_hash_map.c  test_str_hash_map.h
